--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,9 @@
-<nav
-  class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top"
->
+<nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top">
   <div class="container-fluid">
     <div class="navbar-wrapper">
       <a class="navbar-brand" href="javascript:void(0)">{{ getTitle() }}</a>
     </div>
-    <button
-      mat-raised-button
-      class="navbar-toggler"
-      type="button"
-      (click)="sidebarToggle()"
-    >
+    <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()">
       <span class="sr-only">Toggle navigation</span>
       <span class="navbar-toggler-icon icon-bar"></span>
       <span class="navbar-toggler-icon icon-bar"></span>
@@ -68,6 +61,7 @@
 
         <li class="nav-item">
           <a class="nav-link" href="javascript:void(0)">
+            {{ usuarioActual.firstName }}
             <i class="material-icons">person</i>
             <p>
               <span class="d-lg-none d-md-block">Account</span>
