mejoras visualez login

--- a/src/app/components/login/login/login.component.css
+++ b/src/app/components/login/login/login.component.css
@@ -1,6 +1,7 @@
 .container {
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+  margin-left: auto;
 }
 .container-form-login {
   align-self: left;
