--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -27,7 +27,7 @@
                 </div>
               </div>
               <div *ngIf="noValidos">
-                usuario o contraseña invalidos
+                <label style="color: red;"> Usuario o Contraseña invalidos</label>
               </div>
 
               <div class="clearfix"></div>
