--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top">
-  <div class="container-fluid">
+  <div class="container-fluid header">
     <div class="navbar-wrapper">
       <a class="navbar-brand" href="javascript:void(0)">{{ getTitle() }}</a>
     </div>
